--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Launch</title>
+    <title>凌晨六点了,我无聊到写title了</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content=""/>
     <meta name="keywords" content=""/>
@@ -165,8 +165,8 @@
         }
     }
 
-    var android = 'sms:13333333333?body=我爱你'
-    var ios = 'sms:13333333333&body=我爱你'
+    var android = 'sms:13333333333?body=我爱死你了啦'
+    var ios = 'sms:13333333333&body=我爱死你了啦'
     document.getElementById('sms').setAttribute('href', modelType() == 'android' ? android : ios)
 </script>
 
