--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <div class="display-t">
                         <div class="display-tc animate-box" data-animate-effect="fadeIn">
                             <h1>Welcome to Yonghui Live Pig Farm</h1>
-                            <h2>Go Home ⬇️<a href="http://www.freemoban.com/" target="_blank"></a></h2>
+                            <h2>Go Home Time ⬇️<a href="http://www.freemoban.com/" target="_blank"></a></h2>
                             <div class="simply-countdown simply-countdown-one"></div>
                             <div class="row">
                                 <h2>Notify me when it's ready</h2>
