--- a/index.html
+++ b/index.html
@@ -97,9 +97,15 @@
             <div class="row copyright">
                 <div class="col-md-12 text-center">
                     <p>
-                        <small class="block">博客开通啦</small>
+                        <small class="block">
+                            创业两次了，虽都以失败而告终，亏了很多钱！！！
+                        </small>
                     </p>
-
+                    <p>
+                        <small class="block">
+                            但是我不死心啊，我想创业，必须创业，希望得到家人的支持和意见
+                        </small>
+                    </p>
                 </div>
             </div>
 
