--- a/index.html
+++ b/index.html
@@ -106,6 +106,11 @@
                             但是我不死心啊，我想创业，必须创业，希望得到家人的支持和意见
                         </small>
                     </p>
+                    <p>
+                        <small class="block">
+                            6.30了，终于可以上去睡觉了... 亚当夏娃么么哒
+                        </small>
+                    </p>
                 </div>
             </div>
 
