--- a/index.html
+++ b/index.html
@@ -91,6 +91,10 @@
         </div>
     </header>
 
+    <main>
+        <a href="./my.html">哈喽</a>
+    </main>
+
     <footer id="fh5co-footer" role="contentinfo">
         <div class="container">
 
