--- a/index.html
+++ b/index.html
@@ -105,9 +105,23 @@
                             但是我不死心啊，我想创业，必须创业，希望得到家人的支持和意见
                         </small>
                     </p>
+                   <p>
+                        <small class="block">
+                            6.30了，终于可以上去睡觉了...
+                        </small>
+                    </p>
                     <p>
                         <small class="block">
-                            6.30了，终于可以上去睡觉了... 亚当夏娃么么哒
+                            时间2020-5-3 12：30：00，中午睡觉做梦了，仿佛以前做过一模一样的梦
+                            <br>
+                            梦里我变成了一个人物，我好像变成了一个游戏人物，在和一个人打架，昏天黑地，我最后把 'ta' 打死了..
+                            <br>
+                            ta 落到了一个漏洞里，我从侧边下去看看，只见得一只鳄鱼，把我吓了一跳
+                            <br>
+                            时间来到：13：28：00，闹铃响起，一般闹铃响，我都能瞬间起来关闭，今天中午我翻身困难，浑身无力
+                            <br>
+                            <br>
+                            早上吃了三个橘子以为能好喃...
                         </small>
                     </p>
                 </div>
