--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
     <!--[if lt IE 9]>
     <script src="js/respond.min.js"></script>
     <![endif]-->
-
 </head>
 <body>
 
@@ -55,13 +54,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 text-center">
-                    <div id="fh5co-logo"><a href="index.html">PPPig<strong>.</strong></a></div>
+                    <div id="fh5co-logo"><a href="index.html">I Love You<strong>.</strong></a></div>
                 </div>
             </div>
         </div>
     </nav>
 
-    <header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image:url(images/img_bg_1.jpg);"
+    <header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image:url(images/img_bg_1.jpg);overflow: hidden"
             data-stellar-background-ratio="0.5">
         <div class="overlay"></div>
         <div class="container">
@@ -69,7 +68,7 @@
                 <div class="col-md-8 col-md-offset-2 text-center">
                     <div class="display-t">
                         <div class="display-tc animate-box" data-animate-effect="fadeIn">
-                            <h1>Welcome to Yonghui Live Pig Farm</h1>
+                            <h1>Welcome to Yonghui's diary</h1>
                             <h2>Go Home Time ⬇️<a href="http://www.freemoban.com/" target="_blank"></a></h2>
                             <div class="simply-countdown simply-countdown-one"></div>
                             <div class="row">
@@ -90,50 +89,67 @@
             </div>
         </div>
     </header>
-    <footer id="fh5co-footer" role="contentinfo">
-        <div class="container">
-
-            <div class="row copyright">
-                <div class="col-md-12 text-center">
-                    <p>
-                        <small class="block">
-                            创业两次了，虽都以失败而告终，亏了很多钱！！！
-                        </small>
-                    </p>
-                    <p>
-                        <small class="block">
-                            但是我不死心啊，我想创业，必须创业，希望得到家人的支持和意见
-                        </small>
-                    </p>
-                   <p>
-                        <small class="block">
-                            6.30了，终于可以上去睡觉了...
-                        </small>
-                    </p>
-                    <p>
-                        <small class="block">
-                            时间2020-5-3 12：30：00，中午睡觉做梦了，仿佛以前做过一模一样的梦
-                            <br>
-                            梦里我变成了一个人物，我好像变成了一个游戏人物，在和一个人打架，昏天黑地，我最后把 'ta' 打死了..
-                            <br>
-                            ta 落到了一个漏洞里，我从侧边下去看看，只见得一只鳄鱼，把我吓了一跳
-                            <br>
-                            时间来到：13：28：00，闹铃响起，一般闹铃响，我都能瞬间起来关闭，今天中午我翻身困难，浑身无力
-                            <br>
-                            <br>
-                            早上吃了三个橘子以为能好喃...
-                        </small>
-                    </p>
-                     <p>
-                        <small class="block">
-                           时间2020-5-5，今天特别喜欢听 <<父亲写的散文诗>>
-                        </small>
-                    </p>
+    <div style="background-image: linear-gradient(-90deg, #29bdd9 0%, #276ace 100%);">
+        <main style="padding-top: 20px;">
+            <div class="container" >
+                <div class="panel panel-success">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">父亲写的散文诗 李健 20/05/05</h3>
+                    </div>
+                    <div class="panel-body">
+                        但愿他们能<span style="color: #fa4558"> 不要活得如此艰难 </span>
+                    </div>
+                </div>
+                <div class="panel panel-info">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">理想 赵雷 20/05/05</h3>
+                    </div>
+                    <div class="panel-body">
+                        因为已是<span style="color: #fa4558"> 当父亲的年纪 </span>
+                    </div>
                 </div>
             </div>
+        </main>
+        <footer id="fh5co-footer" role="contentinfo" style="color: #f0e8e8;">
+            <div class="container">
 
-        </div>
-    </footer>
+                <div class="row copyright">
+                    <div class="col-md-12 text-center">
+                        <p>
+                            <small class="block">
+                                创业两次了，虽都以失败而告终，亏了很多钱！！！
+                            </small>
+                        </p>
+                        <p>
+                            <small class="block">
+                                但是我不死心啊，我想创业，必须创业，希望得到家人的支持和意见
+                            </small>
+                        </p>
+                        <p>
+                            <small class="block">
+                                6.30了，终于可以上去睡觉了...
+                            </small>
+                        </p>
+                        <p>
+                            <small class="block">
+                                时间2020-5-3 12：30：00，中午睡觉做梦了，仿佛以前做过一模一样的梦
+                                <br>
+                                梦里我变成了一个人物，我好像变成了一个游戏人物，在和一个人打架，昏天黑地，我最后把 'ta' 打死了..
+                                <br>
+                                ta 落到了一个漏洞里，我从侧边下去看看，只见得一只鳄鱼，把我吓了一跳
+                                <br>
+                                时间来到：13：28：00，闹铃响起，一般闹铃响，我都能瞬间起来关闭，今天中午我翻身困难，浑身无力
+                                <br>
+                                <br>
+                                早上吃了三个橘子以为能好喃...
+                            </small>
+                        </p>
+                    </div>
+                </div>
+
+            </div>
+        </footer>
+    </div>
 </div>
 
 <div class="gototop js-top">
@@ -158,7 +174,7 @@
 <script src="js/main.js"></script>
 
 <script>
-    var d = new Date(new Date().getTime() + 6201523660);
+    var d = new Date('2020/07/01');
     console.log(d)
 
     // default example
