--- a/index.html
+++ b/index.html
@@ -108,6 +108,22 @@
                         因为已是<span style="color: #fa4558"> 当父亲的年纪 </span>
                     </div>
                 </div>
+                <div class="panel panel-info">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">初中前的生活 20/05/05</h3>
+                    </div>
+                    <div class="panel-body">
+                        我写这个日记的原因
+                        <br>
+                        今天看吃播，有个博主做了一起腌菜炒肉
+                        <br>
+                        哎，小时候家里穷，吃肉很难，对腌菜炒肉很有印象，腌菜猪肉比为(100:1),毫不夸张的。
+                        <br>
+                        菜上桌，我肯定选肉去啦，几十秒后，菜已经被翻了几十遍，😄，就只有吃腌菜了，偶尔翻出个肥肉跟现在赚了几万是一样的感觉...
+                        <br>
+                        我们家以前看富不富裕，主要就是看肉和腌菜的比例，😁
+                    </div>
+                </div>
             </div>
         </main>
         <footer id="fh5co-footer" role="contentinfo" style="color: #f0e8e8;">
