--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                         因为已是<span style="color: #fa4558"> 当父亲的年纪 </span>
                     </div>
                 </div>
-                <div class="panel panel-info">
+                <div class="panel panel-success">
                     <div class="panel-heading">
                         <h3 class="panel-title">初中前的生活 20/05/05</h3>
                     </div>
@@ -122,6 +122,26 @@
                         菜上桌，我肯定选肉去啦，几十秒后，菜已经被翻了几十遍，😄，就只有吃腌菜了，偶尔翻出个肥肉跟现在赚了几万是一样的感觉...
                         <br>
                         我们家以前看富不富裕，主要就是看肉和腌菜的比例，😁
+                    </div>
+                </div>
+                <div class="panel panel-info">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">编程年限 20/05/06</h3>
+                    </div>
+                    <div class="panel-body pantran dis">
+                        今天看到一条 'juejin.im' 的推荐
+                        <br>
+                        有人这样说道：'每次加班看到30多岁的同事也在加，就仿佛看到十年后的我'
+                        <br>
+                        评论又一次一边倒的一大部分人开始 '嘲讽，看扁...' 自己的职业
+                        <br>
+                        这些人应该被抓去浸猪笼，难道不是吗？
+                        <br>
+                        nmgb，这群人自身本就是 Rubbish
+                        <br>
+                        讲真的，你现在出去干你认为你能做到死的工作就好了，非得天天在网络bb
+                        <br>
+                        生命一分一秒在流逝，可他们感觉不到！
                     </div>
                 </div>
             </div>
