--- a/index.html
+++ b/index.html
@@ -133,13 +133,13 @@
                         <br>
                         有人这样说道：'每次加班看到30多岁的同事也在加，就仿佛看到十年后的我'
                         <br>
-                        评论又一次一边倒的一大部分人开始 '嘲讽，看扁...' 自己的职业
+                        评论又一次一边倒的一大部分人开始 '嘲讽，看扁，青春饭...' 自己的职业
                         <br>
                         这些人应该被抓去浸猪笼，难道不是吗？
                         <br>
                         nmgb，这群人自身本就是 Rubbish
                         <br>
-                        讲真的，你现在出去干你认为你能做到死的工作就好了，非得天天在网络bb
+                        讲真的，你现在出去干你认为你能<span style="color: #fa4558"> 做到死并且自己特别满意 </span>的工作就好了，非得天天在网络bb
                         <br>
                         生命一分一秒在流逝，可他们感觉不到！
                     </div>
