--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                             <div class="row">
                                 <h2>Notify me when it's ready</h2>
                                 <a id="sms" href="sms:">
-                                    <button class="btn btn-primary" style="margin-bottom: 40px">发条短信爱上明天</button>
+                                    <button class="btn btn-primary" style="margin-bottom: 40px">你点我呀</button>
                                 </a>
                                 <ul class="fh5co-social-icons">
                                     <li><a href="javascript:void(0)"><i class="icon-qq"></i></a></li>
@@ -164,20 +164,6 @@
                         <p>
                             <small class="block">
                                 6.30了，终于可以上去睡觉了...
-                            </small>
-                        </p>
-                        <p>
-                            <small class="block">
-                                时间2020-5-3 12：30：00，中午睡觉做梦了，仿佛以前做过一模一样的梦
-                                <br>
-                                梦里我变成了一个人物，我好像变成了一个游戏人物，在和一个人打架，昏天黑地，我最后把 'ta' 打死了..
-                                <br>
-                                ta 落到了一个漏洞里，我从侧边下去看看，只见得一只鳄鱼，把我吓了一跳
-                                <br>
-                                时间来到：13：28：00，闹铃响起，一般闹铃响，我都能瞬间起来关闭，今天中午我翻身困难，浑身无力
-                                <br>
-                                <br>
-                                早上吃了三个橘子以为能好喃...
                             </small>
                         </p>
                     </div>
