--- a/index.html
+++ b/index.html
@@ -144,6 +144,22 @@
                         生命一分一秒在流逝，可他们感觉不到！
                     </div>
                 </div>
+                <div class="panel panel-success">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">理想 非赵雷 20/05/05</h3>
+                    </div>
+                    <div class="panel-body pantran dis">
+                        昨晚上理想又变了
+                        <br>
+                        创业 或者 买房
+                        <br>
+                        不知道选择什么？
+                        <br>
+                        不知道怎样选择以后不会后悔！
+                        <br>
+                        好烦啊！
+                    </div>
+                </div>
             </div>
         </main>
         <footer id="fh5co-footer" role="contentinfo" style="color: #f0e8e8;">
