--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                         <h3 class="panel-title">取名 20/05/07</h3>
                     </div>
                     <div class="panel-body pantran dis">
-                        李思洁
+                        <del>李思洁</del>
                         <br>
                         李采洁
                         <br>
@@ -175,7 +175,7 @@
                         <br>
                         李振宇
                         <br>
-                        李香兰
+                        <del>李香兰</del>
                     </div>
                 </div>
             </div>
