--- a/index.html
+++ b/index.html
@@ -178,6 +178,34 @@
                         <del>李香兰</del>
                     </div>
                 </div>
+                <div class="panel panel-success">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">居安思危 20/05/10</h3>
+                    </div>
+                    <div class="panel-body pantran dis">
+                        今天脑海里一下就浮现出了<span style="color: #fa4558"> 居安思危 </span>这个词
+                        <br>
+                        现在活的很轻松
+                        <br>
+                        但是十年后自己又会是什么样子喃！！
+                        <br>
+                        想着真累，但是又不能不想
+                        <br>
+                        十年前的我和现在的我就是一个地地地地地地地地下，一个地上
+                        <br>
+                        如果未来十年我回到了十年前的样子怎么办呀
+                        <br>
+                        又或者说到了一个<span style="color: #fa4558"> "上有老下有小" </span>的时候又怎么办啊
+                        <br>
+                        到了30-35岁后，职业干不动了，又能去做什么啊！！！
+                        <br>
+                        <span style="color: #fa4558">到30岁也就还有五年时间了</span>
+                        <br>
+                        五年，五年，我也不知道未来五年怎么过啊！！！
+                        <br>
+                        来个仙人指指路啊
+                    </div>
+                </div>
             </div>
         </main>
         <footer id="fh5co-footer" role="contentinfo" style="color: #f0e8e8;">
@@ -270,8 +298,8 @@
         }
     }
 
-    var android = 'sms:13333333333?body=我爱死你了啦'
-    var ios = 'sms:13333333333&body=我爱死你了啦'
+    var android = 'sms:13333333333?body=未来可期'
+    var ios = 'sms:13333333333&body=未来可期'
     document.getElementById('sms').setAttribute('href', modelType() == 'android' ? android : ios)
 </script>
 
